# osm_placenames

./: .gitignore  CONTRIBUTING.md  HISTORY.md  LICENSE  README.md  justfile  pyproject.toml  run-all.sh
.github/: ISSUE_TEMPLATE.md
.github/workflows/: test.yml
docs/: index.md  installation.md  usage.md
src/osm_placenames/: __init__.py  __main__.py  dbformat.py  is_in.py  placenames.py  poly.py  wikidata.py
tests/: __init__.py  test_dbformat.py  test_placenames.py
